2008-05-04  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18879
          <rdar://problem/5909481> Reproducible crash when removing a gradient

        Test: fast/gradients/crash-on-remove.html

        * css/CSSImageGeneratorValue.cpp:
        (WebCore::CSSImageGeneratorValue::CSSImageGeneratorValue):
        (WebCore::CSSImageGeneratorValue::addClient): Added a call to ref() the
        value.
        (WebCore::CSSImageGeneratorValue::removeClient): Added code to deref()
        the value.

2008-05-03  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Move createDOMWrapper(JSObject* object) out of the KJS namespace and into
        the WebCore namespace now that the required compilers don't freak out about
        this anymore.

        * bindings/objc/DOMUtility.mm:
        (WebCore::createDOMWrapper):

2008-05-03  Rob Buis  <buis@kde.org>

        Reviewed by Sam.

        https://bugs.webkit.org/show_bug.cgi?id=18652
        onchange events don't seem to fire for input[type=range] controls.

        Fire changeEvent when clicking the slider outside the current
        thumb position.

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::setValueForPosition):

2008-05-03  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Remove unused enums from JSDOMWindowBase.

        * bindings/js/JSDOMWindowBase.h:
        (WebCore::JSDOMWindowBase::):

2008-05-03  Sam Weinig  <sam@webkit.org>

        Real build fix.

        * WebCore.xcodeproj/project.pbxproj:

2008-05-03  Sam Weinig  <sam@webkit.org>

        Build fix.

        * bindings/js/kjs_events.cpp:
        (WebCore::JSAbstractEventListener::handleEvent):

2008-05-03  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Geoffrey Garen.

        Rename JSDOMWindowWrapper to JSDOMWindowShell.

2008-05-01  Rob Buis  <buis@kde.org>

        Reviewed by Eric.
